# first-project-for-triton

./: .gitignore  LICENSE  README.md  inner_product.py  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  init_env.sh
official-tutorial/: 01-vector-addition.py  02-fused-softmax.py  03-matrix-multiplication.py  vector_addition.py
