[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.8.0+cu128",
    "numpy>=2.3.4",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
]


[tool.uv.sources]
torch = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
